@@ -1,3 +1,5 @@
+	33. Added some debugging code in flicDistance.cpp and flicDistance.h.
+	32. Corrected some warning and removed useless KWSPRECOND() in flicDirectPath.cpp.
         31. Adaptation to KPP version 2.04.500.
 
 2008/04/24      kwsPlus release 1.3.1
